# roam

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
roam/: CMakeLists.txt
roam/cmake/: CUDACheckCompute.cmake
roam/cuda/: dp_cuda.cu  dp_cuda.h  roam_cuda.cu  roam_cuda.h
roam/include/: ClosedContour.h  Configuration.h  ContourWarper.h  DynamicProgramming.h  DynamicProgramming_CPUGPU.h  EnergyTerms.h  GC_Energy.h  GlobalModel.h  GreenTheorem.h  Node.h  Reparametrization.h  RotatedRect.h  SnapcutTerms.h  StarGraph.h  VideoSegmenter.h
roam/src/: ClosedContour.cpp  ContourWarper.cpp  DynamicProgramming.cpp  EnergyTerms.cpp  GC_Energy.cpp  GlobalModel.cpp  GreenTheorem.cpp  Node.cpp  Reparametrization.cpp  RotatedRect.cpp  SnapcutTerms.cpp  StarGraph.cpp  VideoSegmenter.cpp
roam/test/: CCTest.h  DPTest.h  DPTest_Basic.h  NodeEnergyTest.h  RRTest.h  WarperTest.h  test_dp.cpp
roam_apps/: CMakeLists.txt  draw_contours.cpp  eval_overall.cpp  eval_perframe.cpp  main_single_mask.cpp  main_utils.cpp  main_utils.h
scripts/: evaluate_generic.sh
tools/: CMakeLists.txt
tools/cv_tools/: CMakeLists.txt
tools/cv_tools/include/: ROAM_GMM.h  ROAM_KCF.h
tools/cv_tools/src/: ROAM_KCF.cpp
tools/maxflow/: CMakeLists.txt
tools/maxflow/maxflow/: maxflow.cpp
tools/om_utils/: CMakeLists.txt
tools/om_utils/include/roam/utils/: color_map.h  confusion_matrix.h  eigen_utils.h  file_utils.h  math_utils.h  opencv_utils.h  oracle_scores.h  serialize.h  timer.h
tools/om_utils/utils/: color_map.cpp  file_utils.cpp  timer.cpp
yaml/: default.yaml  default_plane.yaml  default_toyhorse.yaml
